--- a/build
+++ b/build
@@ -1,6 +1,6 @@
 #!/bin/bash
-C_USER=$(id -u) docker-compose build --build-arg userId=$(id -u)
+docker-compose build
 
 #install dependencies
 C_USER=$(id -u) docker-compose up -d
-docker exec -ti login-app composer install --no-scripts
+docker exec -ti tree-app composer install --no-scripts --no-interaction
